@@ -47,6 +47,7 @@
 				background-color: #F6F6F6;
 				color: black;
 				border-radius: 4px;
+				@include rem(height, 40px);
 				width: 100%;
 				box-sizing: border-box;
 				box-shadow:
@@ -98,7 +99,7 @@
 			}
 
 			.TestBed__logLocation {
-				@include rem(margin, 30px 0 70px 0);
+				@include rem(margin, 30px 0 0 0);
 				width: 100%;
 				float: left;
 
@@ -137,6 +138,10 @@
 				}
 
 				.hidden { display:none; }
+			}
+
+			.TestBed__resultLoggedPath{
+
 			}
 		}
 	}
