@@ -8,6 +8,7 @@
  */
 	import helpers from './../helpers';
 	const fs = require('fs');
+	const path = require('path');
 
  /**
  * { Function }
@@ -22,6 +23,17 @@
 	const log = (input, callback) => {
 
 		// Support functions
+
+			// Linebreak
+			const wrapLineBreak = (input) => {
+				// Add a line break based on the OS (encoding is different on UNIX vs Windows)
+				if (process.platform === 'win32'){
+					return input + '\r\n';
+				}
+
+				return input + '\n';
+			};
+
 			// Function to write file
 			const writeFile = (writePath, messageContent) => {
 				fs.writeFile(writePath, messageContent, function (err) {
@@ -35,14 +47,6 @@
 
 			// Append to file
 			const appendFile = (writePath, messageContent) => {
-
-				// Add a line break based on the OS (encoding is different on UNIX vs Windows)
-				if (process.platform === 'win32'){
-					messageContent = messageContent + '\r\n';
-				} else {
-					messageContent = messageContent + '\n';
-				}
-
 				fs.appendFile(writePath, messageContent, function (err) {
 					if (err) {
 						return console.log(err);
@@ -54,11 +58,17 @@
 
 		// Definitions
 		const messageContent = input.messageContent,
-					messageLocationLookIn = input.messageLocationLookIn,
-					messageLocationPath = input.messageLocationPath + '/',
-					messageInBytes = helpers.check.stringInBytes(messageContent);
+				messageLocationLookIn = input.messageLocationLookIn,
+				messageInBytes = helpers.check.stringInBytes(messageContent);
 
-		let writePath;
+		let writePath,
+			messageLocationPath;
+
+		if (input.messageLocationPath) {
+			messageLocationPath = input.messageLocationPath + '/';
+		} else {
+			messageLocationPath = '';
+		}
 
 			// Define LookIn (path base) and add subpath
 			if (messageLocationLookIn == 'driveRoot'){
@@ -75,85 +85,91 @@
 				}
 			}
 
-			// Check if the folder exists
-			if (!fs.existsSync(writePath)){
-					fs.mkdirSync(writePath);
+		// Check if the folder exists
+		if (!fs.existsSync(writePath)){
+				fs.mkdirSync(writePath);
+		}
+
+		// Add a name to the logFile
+			// First an inventory check, get a list of the current log files
+			//let fileArray = fs.readdirSync(writePath, ['**.txt']),
+
+			let fileArray = fs.readdirSync(writePath),
+				logArray = [];
+
+			// Take only files that are log files
+			for (let i in fileArray) {
+				if (path.extname(fileArray[i]) === '.txt' && fileArray[i].includes('log')) {
+					logArray.push(fileArray[i]);
+					console.log('I am copying to the logArray: ', fileArray[i]);
+				}
 			}
 
-			// Add a name to the logFile
-				// First an inventory check, get a list of the current log files
-				let fileArray = fs.readdirSync(writePath),
-					logArray = [];
 
-				// Remove any files that might not be log files
-				fileArray.forEach(function (fileName, arrayIndex) {
+			console.log('logArray:');
+			console.log(logArray);
 
-					if (fileName.includes('log')){
-						logArray.push(fileName);
-						console.log('I am copying to the logArray: ', fileName);
-					};
-				});
+			// Define the total
+			const logsAmount = logArray.length;
 
+			// Define a base file to verify the size of the mostRecentFile
+			let logFileExtention = '.txt',
+				newLogNumber = logsAmount + 1,
+				baseFileName = 'log' + logFileExtention,
+				mostRecentFilePath,
+				newLogFileName,
+				messageWithLineBreak = wrapLineBreak(messageContent);
 
-				console.log('logArray:');
-				console.log(logArray);
+			// Check file size of mostRecentFile and define a name for the new log
+			if (logArray.length === 0) {
+				newLogNumber = '';
+				newLogFileName = baseFileName;
+			} else if (logArray.length === 1){
+				baseFileName = 'log' + logFileExtention;
+				newLogFileName = 'log' + '.' + newLogNumber + logFileExtention;
+				mostRecentFilePath = writePath + baseFileName;
+			} else {
+				baseFileName = 'log' + '.' + logsAmount + logFileExtention;
+				newLogFileName = 'log' + '.' + newLogNumber + logFileExtention;
+				mostRecentFilePath = writePath + baseFileName;
+			}
 
-				// Define the total
-				const logsAmount = logArray.length;
+			// Is there a mostRecentFile or is this the first item?
+			console.log('aaaaaaaaaaa');
+			console.log(mostRecentFilePath);
 
-				// Define a base file to verify the size of the mostRecentFile
-				let logFileExtention = '.txt',
-					newLogNumber = logsAmount + 1,
-					baseFileName = 'log' + logFileExtention,
-					mostRecentFilePath,
-					newLogFileName;
+			if (logsAmount != 0){
+				const fileStats = fs.statSync(mostRecentFilePath),
+						fileSizeInBytes = fileStats['size'];
 
-				// Check file size of mostRecentFile and define a name for the new log
-				if (logArray.length === 0) {
-					newLogNumber = '';
-					newLogFileName = baseFileName;
-				} else if (logArray.length === 1){
-					baseFileName = 'log' + logFileExtention;
-					newLogFileName = 'log' + '.' + newLogNumber + logFileExtention;
-					mostRecentFilePath = writePath + baseFileName;
+				console.log(fileSizeInBytes, messageInBytes);
+				// Is the last log file still within 5000 bytes if I add this new logMessage?
+				if (fileSizeInBytes + messageInBytes < 5000){
+					// Append to file
+
+					writePath = mostRecentFilePath;
+					appendFile(writePath, messageWithLineBreak);
 				} else {
-					baseFileName = 'log' + '.' + logsAmount + logFileExtention;
-					newLogFileName = 'log' + '.' + newLogNumber + logFileExtention;
-					mostRecentFilePath = writePath + baseFileName;
-				}
-
-				// Is there a mostRecentFile or is this the first item?
-				console.log('aaaaaaaaaaa');
-				console.log(mostRecentFilePath);
-
-				if (logsAmount != 0){
-					const fileStats = fs.statSync(mostRecentFilePath),
-							fileSizeInBytes = fileStats['size'];
-
-					console.log(fileSizeInBytes, messageInBytes);
-					// Is the last log file still within 5000 bytes if I add this new logMessage?
-					if (fileSizeInBytes + messageInBytes < 5000){
-						// Append to file
-						writePath = writePath + newLogFileName;
-						console.log(newLogFileName);
-						console.log(newLogFileName);
-
-						appendFile(mostRecentFilePath, messageContent);
-					} else {
-						// Write a new file
-						writePath = writePath + newLogFileName;
-
-						writeFile(writePath, messageContent);
-					}
-				} else {
-					// Define path for the first file
+					// Write a new file
 					writePath = writePath + newLogFileName;
 
-					writeFile(writePath, messageContent);
+					writeFile(writePath, messageWithLineBreak);
 				}
+			} else {
+				// Define path for the first file
+				writePath = writePath + newLogFileName;
+
+				writeFile(writePath, messageWithLineBreak);
+			}
 
 		// Callback
-		callback ? callback(messageContent) : ' ';
+		const result = {
+			messageContent : messageContent,
+			writePath : writePath
+		};
+
+		console.log(result.writePath);
+		callback ? callback(result) : ' ';
 	};
 
 	return {
