@@ -23,6 +23,20 @@
 			return input.charAt(0).toUpperCase() + input.slice(1);
 		},
 
+		filterSpecificFirstChar : function (input, charFilter) {
+			if (input.charAt(0) === charFilter){
+				input = input.slice(1, input.length);
+			}
+			return input;
+		},
+
+		filterSpecificLastChar : function (input, charFilter) {
+			if (input.charAt(input.length - 1) === charFilter){
+				input = input.slice(0, input.length - 1);
+			}
+			return input;
+		},
+
 		removeWhitespace : function (input) {
 			return input.replace(/\s/g, '');
 		},
